--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
     "build:server": "tsc",
     "build": "yarn copyfiles && yarn build:payload && yarn build:server",
-    "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
+    "create:migration": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production payload migrate:create",
+    "migrate": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production payload migrate",
+    "serve": "cross-env  yarn create:migration  &&  yarn migrate &&  PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
     "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "generate:graphQLSchema": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
