--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload",
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build:payload": "cross-env  yarn create:migration  &&  yarn migrate && PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
+    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build && yarn create:migration  &&  yarn migrate",
     "build:server": "tsc",
     "build": "yarn copyfiles && yarn build:payload && yarn build:server",
     "create:migration": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production payload migrate:create",
