--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload",
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build && yarn create:migration  &&  yarn migrate",
+    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build; yarn create:migration;  yarn migrate",
     "build:server": "tsc",
     "build": "yarn copyfiles && yarn build:payload && yarn build:server",
-    "create:migration": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.js payload migrate:create",
-    "migrate": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.js payload migrate",
+    "create:migration": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate:create",
+    "migrate": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate",
     "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
     "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
